# nbserv-client

./: .gitlab-ci.yml  .pyproject.toml.swp  .travis.yml  BUILD.md  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: APIStatus.md  ApiContentsPathGet400Response.md  ApiContentsPathPostRequest.md  ApiContentsPathPutRequest.md  ApiGet200Response.md  ApiKernelsPostRequest.md  ApiKernelspecsGet200Response.md  ApiMeGet200Response.md  ApiSessionsPost501Response.md  ApiSpecApi.md  Checkpoints.md  ConfigApi.md  Contents.md  ContentsApi.md  DefaultApi.md  Identity.md  IdentityApi.md  Kernel.md  KernelSpec.md  KernelSpecFile.md  KernelSpecFileHelpLinksInner.md  KernelSpecResources.md  KernelsApi.md  KernelspecsApi.md  Session.md  SessionsApi.md  StatusApi.md  Terminal.md  TerminalsApi.md
nbserv_client/: __init__.py  api_client.py  configuration.py  rest.py
openapi_client/: exceptions.py  rest.py
test/: test_api_contents_path_get400_response.py  test_api_contents_path_post_request.py  test_api_contents_path_put_request.py  test_api_get200_response.py  test_api_kernels_post_request.py  test_api_kernelspecs_get200_response.py  test_api_me_get200_response.py  test_api_sessions_post501_response.py  test_api_spec_api.py  test_api_status.py  test_checkpoints.py  test_config_api.py  test_contents.py  test_contents_api.py  test_default_api.py  test_identity.py  test_identity_api.py  test_kernel.py  test_kernel_spec.py  test_kernel_spec_file.py  test_kernel_spec_file_help_links_inner.py  test_kernel_spec_resources.py  test_kernels_api.py  test_session.py  (+5 more)
(+45 files in other folders)
