[tool.poetry]
name = "nbserv-client"
version = "1.4.0"
description = "Jupyter Server API"
authors = ["Andrew Chang"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/americandatascience/nbserv-client"
keywords = ["OpenAPI", "OpenAPI-Generator", "Jupyter Server API"]
include = ["nbserv_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
